--- a/front-page.html
+++ b/front-page.html
@@ -1,18 +1,33 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatiable" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Weather App</title>
     <link rel="stylesheet" type="text/css" href="front-page.css">
 </head>
 <body>
-    <h1>Weather App</h1>
-    <input type="text" id="city" placeholder = "Enter City Name" >
-    
-    <button id="submit">Submit</button>
     <div id="background"></div>
-        <div class="c1"></div>
-            <div class="clouds"></div>
-        <div class="c2"></div>
-            <div class="clouds"></div>
+    <div class="c1"></div>
+        <div class="clouds"></div>
+    <div class="c2"></div>
+        <div class="clouds"></div>
+    <!-- City Input -->
+    <div class = "container my-5">
+        <div class = "row">
+            <div class = "input">
+                <h1>Weather App</h1>
+                <form class="form-group">
+                    <label for="city">Enter City for Weather: </label>
+                    <input type="text" name="city" class="form-control">
+                </form>
+
+                <div id = "details" class = "card my-5"></div>
+            </div>
+        </div>
+    </div>
+    <script src="js/forecast.js"></script>
+    <script src="js/city-weather.js"></script>
 </body>
 </html>
